<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Pegaturan">
    <TextView
            android:id="@+id/Pengaturan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_tools"
            android:background="#00f"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:padding="20dp"
        />

    <LinearLayout
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_below="@+id/Pengaturan"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="@dimen/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bendahara"
                    android:hint="@string/bendahara"
                    android:text="@string/bendahara"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="@dimen/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/WaliKelas"
                    android:text="@string/WaliKelas"
                    android:hint="@string/WaliKelas"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="@dimen/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kelas"
                    android:hint="@string/kelas"
                    android:text="@string/kelas"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="@dimen/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/biaya"
                    android:hint="@string/biaya"
                    android:text="@string/Vbiaya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="@dimen/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/hari"
                android:layout_margin="@dimen/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnpengatur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/btnSimpan"
                android:background="@color/green"
                android:textColor="@color/white"
            />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/close"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        />
</RelativeLayout>