<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".KasKeluar">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SignUp">

        <LinearLayout
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_margin="@dimen/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inname"
                        android:hint="@string/nama"
                        android:layout_width="match_parent"
                        android:maxLines="1"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_margin="@dimen/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inuser"
                        android:hint="@string/jumlah"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_margin="@dimen/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_margin="@dimen/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_margin="@dimen/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/jk"
                        android:layout_margin="@dimen/margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnsignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/btnSimpan"
                    android:layout_gravity="center"
                    android:background="@color/green"
                    android:textColor="@color/white"
                    />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>